web/src/components/Navbar/Navbar.module.css
.navbar {
  display: flex;
  flex-direction: column;
  background-color: var(--background-secondary);
  position: sticky;
  top: 0;
  z-index: 1;
  width: 100%;
  max-height: 100vh;
}

.navHolder {
  display: flex;
  flex-direction: row;
  align-items: flex-end;
  font-size: var(--size-4);
}

.navHolder.expand {
  flex-direction: column;
}

.navMain {
  width: 100%;
}

.navItems {
  display: flex;
  flex-grow: 1;
  flex-direction: row;
  align-self: stretch;
}

.navItems.expand {
  flex-direction: column;
  background-color: var(--background-primary);
}

.navItem {
  text-align: left;
  width: 100%;
}

.navItem.expand {
  text-align: right;
}

@media (hover: hover) {
  .navItem:hover {
    border-color: var(--primary);
  }
}

.navElement {
  color: var(--primary-light);
  font-weight: var(--font-heavy);
  padding: var(--size-3);
}

.navIcon {
  display: block;
  box-sizing: content-box;
  height: var(--line-height);
  width: var(--line-height);
  padding: var(--size-3);
}

.navMain.expand {
  position: absolute;
  width: 100%;
  top: 100%;
}

.navItems:not(.expand) > *:nth-child(n + 3) {
  display: none;
}

.navAccordion:not(.expand) > * {
  display: none;
}

